--- a/infogram/app/src/main/res/values-night/themes.xml
+++ b/infogram/app/src/main/res/values-night/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.Infogram" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+    <style name="Theme.Infogram" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryVariant">@color/colorPrimaryDark</item>
@@ -12,5 +12,17 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
+    </style>
+    <style name="EditTextWhite" parent="Theme.AppCompat.Light">
+        <item name="android:textSize">@dimen/editText_TextSize</item>
+        <item name="android:textColorHint">@color/editText_textColorHint</item>
+        <item name="android:textColorPrimary">@color/editText_textColorPrimary</item>
+        <item name="colorControlNormal">@color/editText_colorControlNormal</item>
+        <item name="colorControlActivated">@color/editText_colorControlActivade</item>
+    </style>
+    <style name="RaiceButtonDark" parent="Theme.AppCompat.Light">
+        <item name="colorButtonNormal">@color/colorPrimaryDark</item>
+        <item name="colorControlHighlight">@color/colorPrimary</item>
+        <item name="android:textColor">@color/buttonTextColor</item>
     </style>
 </resources>
