--- a/infogram/app/src/main/res/values/colors.xml
+++ b/infogram/app/src/main/res/values/colors.xml
@@ -10,4 +10,11 @@
     <color name="colorPrimary">#2196F3</color>
     <color name="colorPrimaryDark">#1976D2</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="editText_textColorHint">#FFFFFF</color>
+    <color name="editText_textColorPrimary">#FFFFFF</color>
+    <color name="editText_colorControlNormal">#FFFFFF</color>
+    <color name="editText_colorControlActivade">#FFFFFF</color>
+    <color name="buttonTextColor">#FFFFFF</color>
+    <color name="textView_textColor">#FFFFFF</color>
+    <color name="colorBlack">#000000</color>
 </resources>
