--- a/infogram/app/src/main/res/layout/activity_login.xml
+++ b/infogram/app/src/main/res/layout/activity_login.xml
@@ -68,7 +68,8 @@
                     android:layout_height="wrap_content"
                     android:text="@string/button_text"
                     android:layout_marginTop="@dimen/login_marginTop"
-                    android:theme="@style/RaiceButtonDark">
+                    android:theme="@style/RaiceButtonDark"
+                    android:onClick="login">
                 </Button>
                 <RelativeLayout
                     android:layout_width="match_parent"
